# serde-strings

./: .travis.yml  Cargo.toml  README.md
.vim/: template.rs
src/: lib.rs
